# linknome

./: .gitignore  NOTICE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml
src/: bridge.js  i18n.js  main.js  meter.js  style.css  taptempo.js  tempo.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: link_probe.rs
src-tauri/icons/: icon.icns
src-tauri/src/: drag.rs  lib.rs  link.rs  main.rs
