[package]
name = "linknome"
version = "0.1.0"
description = "Linknome — Ableton Link tempo & meter remote"
authors = ["Pragmile"]
edition = "2021"
license = "GPL-2.0-or-later"

# The library target is what Tauri's mobile/desktop entry point runs.
[lib]
name = "linknome_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-window-state = "2"
rusty_link = "0.4"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
